# immoassist-agent

./: .dockerignore  .env  .eslintrc.json  .gitignore  .pre-commit-config.yaml  CONVERSATION_IMPROVEMENTS.md  DEPLOY.md  Dockerfile  Dockerfile.simple  INTEGRATION_PATTERNS.md  MULTI_AGENT_DEPLOYMENT_GUIDE.md  Makefile  QUICK_DEPLOY.md  README.md  README_NEW.md  README_OLD.md  REFACTORING_REPORT.md  SECURITY.md  SESSIONS_AND_VERTEX_GUIDE.md  conftest.py  deploy.ps1  deploy.sh  environment.config.template  logs.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_agent.py  run_immoassist.py  test_types.py  validation_script.py
.cursor/rules/: ai-agents.md  immoassist.md
.github/workflows/: ci.yml
app/: __init__.py  agent.py  config.py  exceptions.py  gothic-agility-464209-f4-39095fb8e054copy.json  health_checks.py  logging_config.py  observability.py
app/models/: __init__.py  financial.py  output_schemas.py  property.py  user.py
app/prompts/: __init__.py  base_system_prompt.py  calculator_specialist.py  calculator_specialist_focused.py  conversation_management.py  conversation_prompts.py  coordination_rules.py  coordination_specialist.py  coordination_specialist_focused.py  knowledge_specialist.py  knowledge_specialist_focused.py  legal_specialist.py  legal_specialist_focused.py  market_analyst.py  market_analyst_focused.py  presentation_specialist.py  presentation_specialist_focused.py  prompt_composer.py  property_specialist.py  property_specialist_focused.py  root_agent.py  root_agent_focused.py
app/services/: __init__.py  session_service.py
app/shared_libraries/: __init__.py  combined_callbacks.py  conversation_callbacks.py  conversation_callbacks_simple.py  conversation_constants.py  datetime_callback.py  language_detector.py
app/tools/: __init__.py  chart_tools.py  conversation_tools.py  datetime_tools.py  integration_tools.py  knowledge_tools.py  legal_tools.py  memory_tools.py  presentation_tools.py  property_tools.py  vertex_search.py
data/FAQ/Allgemein/: Ich habe Erfahrung mit Immobilieninvestments. Muss ich trotzdem den Kurs absolvieren, bevor ich in eine Immobilie investiere.txt  Was genau macht ImmoDev.txt  Was ist die Mission von ImmoDev.txt  Wer kann ImmoDev nutzen.txt  Wer sind die Spezialisten, mit denen ImmoDev zusammenarbeitet.txt  Wie lange dauert es, den Kurs absolvieren.txt  Wie sieht das Prozedere aus, um Deine Wunschwohnung zu erwerben.txt  Wie verwendet ImmoDev meine Daten.txt
data/FAQ/Erste Schritte/: Gibt es bei ImmoDev versteckte Kosten, die jetzt oder später auftauchen.txt  Kann ich selber bestimmen, wann ich mit einer KI oder mit einer Person in Kontakt bin.txt  Können die von ImmoDev vermittelten Finanzierungsexperten unabhängig auf verschiedene Banken zurückgreifen.txt  Welche Dienstleistungen bietet ImmoDev an.txt  Wie sieht die Zusammenarbeit mit einem Finanzberater bzw. Finanzierungsexperten aus.txt  Wird die Beratung zu Thema 'Immobilieninvestition' von einer KI oder von menschlichen Experten durchgeführt.txt  Überwacht ImmoDev auch den Bauprozess und die Bauqualität.txt
data/FAQ/Investitionsobjekte/: Werden die von Ihnen ausgesuchten Objekte durch Ihre Vorabprüfung teurer.txt  Woher kommen die Daten für die Berechnung der individuellen finanziellen Situation.txt
data/FAQ/Projektentwickler/: Was sind die Vorteile einer Partnerschaft mit ImmoDev für einen Projektentwickler.txt  Welche Kriterien legt ImmoDev bei der Auswahl der Projektentwickler und deren Objekte an.txt  Welche laufende Gebühren fallen für Projektentwickler an, wenn seine Objekte bei ImmoDev gelistet und verkauft werden.txt  Wie erleichtern Sie die Kommunikation zwischen den Kunden von ImmoAssist (den Investoren) und unserem Vertriebsteam.txt  Wie vermarktet ImmoDev, die gelisteten Objekte.txt
data/FAQ/Rechner/: Fallen Gebühren für die Nutzung des ImmoDev Rechner-Tools an.txt  In welcher Form kann ich die Gesamtauswertung oder Berechnungsergebnisse erhalten.txt  Was sind die Alleinstellungsmerkmale des ImmoDev Rechner-Tools.txt  (+1 more)
data/Handbücher/: Muss ein Immobilienkaufvertrag notariell beurkundet werden.txt  Was ist Eigenkapital.txt  Was ist Eigentum.txt  Was ist Tilgung.txt  Was ist das Erbbaurecht.txt  Was ist das Grundbuch.txt  Was ist das Verfahren von Angebot und Annahme.txt  Was ist das Vorkaufsrecht.txt  Was ist der Erbbauzins.txt  Was ist der Heimfall (im Kontext des Erbbaurechts).txt  Was ist der Schuldenerlass.txt  Was ist der Zinssatz.txt  Was ist die Dienstbarkeit.txt  Was ist die Einheitsbewertung (im steuerlichen Kontext).txt  Was ist die Grunderwerbsteuer.txt  Was ist die Grundsteuer.txt  Was ist die Kaufabwicklung.txt  Was ist die Kostenverteilung beim Einfamilienhausbau.txt  Was ist die Kreditlaufzeit.txt  Was ist die Makler- und Bauträgerverordnung (MaBV).txt  Was ist die Refinanzierung.txt  Was ist die monatliche Rate.txt  Was ist ein Baufinanzierungsberater.txt  Was ist ein Bausachverständiger.txt  Was ist ein Hypotheksdarlehen.txt  Was ist ein Immobiliengutachter.txt  Was ist ein Immobilienmakler.txt  Was ist ein Kaufvertrag.txt  Was ist ein Widerspruch.txt  Was ist eine Baufinanzierung.txt  Was ist eine Grundschuld.txt  Was ist eine Immobilienbewertung.txt  Was ist eine Immobilienfinanzierung.txt  Was ist eine Immobilientransaktion.txt  Was ist eine Vormerkung.txt  Was ist eine Zwangsversteigerung.txt  Was sind Baunebenkosten.txt  Was sind Notar- und Grundbuchkosten.txt  Was sind die Gesamtbaukosten.txt  Was sind die Kaufnebenkosten für Immobilien.txt  (+10 more)
frontend/: agentClient.js  apiClient.js  chartRenderer.js  chatUI.js  constants.js  dom.js  domCache.js  index.html  languageManager.js  script.js  speechManager.js  style.css  utils.js  voiceChat.js
immoassist_agent/: __init__.py  a2a_agent_card.py  multi_agent_architecture.py  true_rag_agent.py
immoassist_agent/core/: __init__.py  config.py  exceptions.py  logging.py  models.py  protocols.py
immoassist_agent/tools/: __init__.py  integration_tools.py  knowledge_tools.py  property_tools.py  user_tools.py
tests/: README.md  test_conversation_flow.py
(+8 files in other folders)
